--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-tabs": "^6.0.0",
     "redux": "^4.2.0",
     "redux-saga": "^1.2.2",
-    "swiper": "^8.4.5"
+    "swiper": "^8.4.5",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
