--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.10.0",
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-brands-svg-icons": "^6.2.1",
     "@fortawesome/free-regular-svg-icons": "^6.2.1",
@@ -23,6 +24,8 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-facebook-login": "^4.1.1",
+    "react-player": "^2.11.0",
     "react-redux": "^8.0.5",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.4.4",
@@ -30,7 +33,8 @@
     "redux": "^4.2.0",
     "redux-saga": "^1.2.2",
     "swiper": "^8.4.5",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "video-react": "^0.16.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
